<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.RecipeDetailActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_back" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/toolbar"
            android:background="@color/black" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/view"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_recipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/iv_recipeImage"
                    android:layout_margin="@dimen/dp5"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:padding="@dimen/dp5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_marginBottom="@dimen/dp5"
                        android:fontFamily="@font/segoeuib"
                        android:padding="@dimen/dp5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp5"
                        android:layout_marginBottom="@dimen/dp5"
                        android:orientation="horizontal"
                        android:padding="@dimen/dp5">

                        <TextView
                            android:id="@+id/tv_urlTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/segoeuib"
                            android:text="@string/url"
                            android:textColor="@color/black"
                            android:textSize="@dimen/dp15" />

                        <TextView
                            android:id="@+id/tv_urlValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp10"
                            android:autoLink="web"
                            android:fontFamily="@font/segoeui"
                            android:textColor="@color/purple_700"
                            android:textSize="@dimen/dp15" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_dishType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuil"
                        android:padding="@dimen/dp5"
                        android:text="@string/dishType"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_mealType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuil"
                        android:padding="@dimen/dp5"
                        android:text="@string/mealType"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_cuisineType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuil"
                        android:padding="@dimen/dp5"
                        android:text="@string/cuisineType"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_totalTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuil"
                        android:padding="@dimen/dp5"
                        android:text="@string/totalTime"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_caution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuil"
                        android:padding="@dimen/dp5"
                        android:text="@string/cautions"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <TextView
                        android:id="@+id/tv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:padding="@dimen/dp5"
                        android:text="@string/ingredients"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_ingredients"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp5"
                        android:scrollbars="none" />

                    <TextView
                        android:id="@+id/tv_healthLabels"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/segoeuib"
                        android:padding="@dimen/dp5"
                        android:text="@string/healthLabels"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dp15" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_healthLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp5"
                        android:scrollbars="none" />


                </LinearLayout>

            </RelativeLayout>


        </ScrollView>


    </LinearLayout>
</layout>