<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:padding="@dimen/dp5"
            android:fontFamily="@font/segoeuib"
            android:textSize="@dimen/dp15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="@dimen/dp120"
                android:layout_height="@dimen/dp100"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp7"
                android:layout_marginRight="@dimen/dp5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_qty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp15" />

                <TextView
                    android:id="@+id/tv_calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calories"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp15" />

                <TextView
                    android:id="@+id/tv_mealType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mealType"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dp15" />


                <TextView
                    android:id="@+id/tv_viewRecipe"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/txt_bg"
                    android:layout_gravity="end"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp5"
                    android:paddingBottom="@dimen/dp5"
                    android:layout_marginTop="@dimen/dp5"
                    android:gravity="center"
                    android:fontFamily="@font/seguibl"
                    android:textSize="@dimen/dp12"
                    android:text="View Recipe"/>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</layout>